# debit

./: .gitignore  Makefile.am  README  README.md  configure.ac
debian/: control  copyright  rules
utils/correlation/: Makefile.am  bitarray.c  bitarray.h
xdl/: xdl2bit.c  xdl_parser.y
